<resources>
    <string name="app_name">LogiPhone</string>

    <string name="main_app_title">電話アプリをデフォルトとして設定してください</string>
    <string name="main_app_content">電話アプリで通話の発着信を行うには、これをデフォルトの通話アプリに設定する必要があります。</string>
    <string name="main_start_content">デフォルトとして設定してください</string>
    <string name="set_default_title">電話 をデフォルトの電話アプリとして設定しますか?</string>
    <string name="set_item_title">電話</string>
    <string name="set_item_app_content">通話履歴へのアクセス権、SMSの送信権限が必要です</string>
    <string name="set_item_phone_content">現在のデフォルト</string>
    <string name="confirm_set_default">デフォルトに設定</string>
    <string name="cancel_set_default">キャンセル</string>
    <string name="alert_set_default_app">電話 現在のデフォルトが選択されました</string>
    <string name="alert_set_default_phone">電話が選択されました</string>

    <string name="title_favorite">お気に入り</string>
    <string name="title_favorite_add">連絡先を選択</string>
    <string name="title_history">履歴</string>
    <string name="title_contacts_logiscope_old">旧型ロジスコ</string>
    <string name="title_contacts_logiscope_new">新型ロジスコ</string>
    <string name="title_contacts_info">連絡先情報</string>
    <string name="title_detail_info">基本情報</string>
    <string name="title_contact_create">連絡先の作成</string>
    <string name="title_contact_edit">連絡先を編集</string>
    <string name="title_alert">通知</string>

    <string name="contacts_search_setting1">電話帳</string>
    <string name="contacts_search_setting1_share">共有電話帳</string>
    <string name="contacts_search_setting1_phone">スマホのみ</string>
    <string name="contacts_search_setting2">対象</string>
    <string name="contacts_search_setting3">検索方法</string>
    <string name="contacts_search_setting_order">五十音検索</string>
    <string name="contacts_search_setting_normal">一般検索</string>

    <string name="content_all">全て</string>
    <string name="content_sms">メッセージ</string>
    <string name="content_sms_warning">さんとテキスト メッセージで会話中 (SMS / MMS)</string>
    <string name="content_call">通話</string>
    <string name="content_call_log">履歴を開く</string>
    <string name="content_message">SMS</string>
    <string name="content_manager">担当者</string>
    <string name="content_detail">詳細を開</string>
    <string name="content_add">追加</string>
    <string name="content_save">保存</string>
    <string name="content_search">検索</string>
    <string name="content_search_setting">検索設定</string>
    <string name="content_company">会社</string>
    <string name="content_person">個人</string>
    <string name="content_search_employee_hint">電話帳を入力してください。</string>
    <string name="content_search_employee_title">利用者リスト</string>
    <string name="content_call_voice">音声通話を発信</string>
    <string name="content_call_video">ビデオ通話</string>
    <string name="content_add_image">名刺を追加</string>
    <string name="content_add_contact">新しい連絡先を作成</string>
    <string name="content_take_photo">写真を撮る</string>
    <string name="content_upload_photo">アップロード</string>
    <string name="content_email">Eメール</string>
    <string name="content_password">パスワード</string>
    <string name="content_login">ログイン</string>
    <string name="content_logout">ログアウト</string>
    <string name="content_ok">OK</string>
    <string name="content_cancel">Cancel</string>
    <string name="content_success">成功</string>
    <string name="content_warning">警告</string>
    <string name="content_error">エラー</string>
    <string name="content_info">情報</string>
    <string name="content_add_favorite">連絡先をお気に入りに追加</string>
    <string name="content_male">男性</string>
    <string name="content_female">女性</string>
    <string name="content_add_phone">新しい電話を追加</string>
    <string name="content_no_information">情報なし</string>
    <string name="content_member_list">会社員一覧</string>

    <string name="hint_first_name">名</string>
    <string name="hint_last_name">姓</string>
    <string name="hint_first_name_kana">よみがな (名)</string>
    <string name="hint_last_name_kana">よみがな (姓)</string>
    <string name="hint_nickname">ニックネーム</string>
    <string name="hint_email">Eメール</string>
    <string name="hint_password">パスワード</string>
    <string name="hint_company">会社</string>
    <string name="hint_department">部門</string>
    <string name="hint_position">役職</string>
    <string name="hint_birth_date">生年月日</string>
    <string name="hint_blood">血液型</string>
    <string name="hint_gender">性別</string>
    <string name="hint_zipcode">郵便番号</string>
    <string name="hint_city">市</string>
    <string name="hint_prefecture">県</string>
    <string name="hint_search_keyword">検索語を入力します。</string>
    <string name="hint_search_contacts">連絡先を検索</string>
    <string name="hint_enter_message">テキスト メッセージ</string>
    <string name="hint_phone_number">電話番号</string>
    <string name="hint_phone_type">ラベル</string>

    <string name="message_connection_error">サーバー接続エラー</string>
    <string name="message_require_correct_login">ログイン情報を正しく入力してください。</string>
    <string name="message_get_data_error">データのロードに失敗しました。 再起動してください。</string>
    <string name="message_add_favorite">ワンタップで連絡先に電話 をかけられます。</string>
    <string name="message_remove_favorite_list">お気に入りリストから削除しました。</string>
    <string name="message_add_favorite_list">お気に入りリストに追加しました。</string>
    <string name="message_add_profile">新しいユーザーを追加しました。</string>
    <string name="message_update_profile">情報変更に成功しました。</string>
    <string name="message_require_add">メール、パスワード、名前、会社名、部署名を入力する必要があります。</string>
    <string name="message_require_update">メール、名前、会社名、部署名を入力する必要があります。</string>
    <string name="message_none_phone">データベースに登録されている電話番号がありません。</string>
</resources>